# cctokens

./: .gitignore  README.md  pyproject.toml
docs/superpowers/specs/: 2026-06-24-cctokens-design.md
src/cctokens/: __init__.py  cli.py  ingest.py  pricing.py  storage.py  tui.py
tests/: test_ingest_storage.py  test_pricing.py
