[project]
name = "cctokens"
version = "0.1.0"
description = "Rich CLI + TUI for Claude Code token usage and cost"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "textual>=0.80",
]

[project.scripts]
cctokens = "cctokens.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cctokens"]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
